--- a/MyProject/MyProject.vcxproj
+++ b/MyProject/MyProject.vcxproj
@@ -20,6 +20,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="10_运算符.c" />
+    <ClCompile Include="11_练习.c" />
+    <ClCompile Include="12_隐式转换.c" />
+    <ClCompile Include="13_强制转换.c" />
+    <ClCompile Include="14_练习.c" />
+    <ClCompile Include="15_逗号运算符.c" />
+    <ClCompile Include="16_if语句.c" />
+    <ClCompile Include="17_switch语句.c" />
     <ClCompile Include="1_HelloWorld.c" />
     <ClCompile Include="2_输出常量.c" />
     <ClCompile Include="3_变量.c" />
