--- a/MyProject/MyProject.vcxproj
+++ b/MyProject/MyProject.vcxproj
@@ -27,7 +27,11 @@
     <ClCompile Include="15_逗号运算符.c" />
     <ClCompile Include="16_if语句.c" />
     <ClCompile Include="17_switch语句.c" />
+    <ClCompile Include="18_for循环.c" />
+    <ClCompile Include="19_for循环练习.c" />
     <ClCompile Include="1_HelloWorld.c" />
+    <ClCompile Include="20_while循环.c" />
+    <ClCompile Include="21_2的幂次方循环练习.c" />
     <ClCompile Include="2_输出常量.c" />
     <ClCompile Include="3_变量.c" />
     <ClCompile Include="4_进制.c" />
