--- a/MyProject/MyProject.vcxproj
+++ b/MyProject/MyProject.vcxproj
@@ -32,8 +32,27 @@
     <ClCompile Include="1_HelloWorld.c" />
     <ClCompile Include="20_while循环.c" />
     <ClCompile Include="21_2的幂次方循环练习.c" />
+    <ClCompile Include="22_打印纸的次数循环练习.c" />
+    <ClCompile Include="23_整数反转.c" />
+    <ClCompile Include="24_算术平方根.c" />
+    <ClCompile Include="25_回文数.c" />
+    <ClCompile Include="26_除数与被除数.c" />
+    <ClCompile Include="27_无限循环.c" />
+    <ClCompile Include="28_continue.c" />
+    <ClCompile Include="29_练习.打印矩形.c" />
     <ClCompile Include="2_输出常量.c" />
+    <ClCompile Include="30_练习.打印三角形.c" />
+    <ClCompile Include="31_练习.打印九九乘法表.c" />
+    <ClCompile Include="32_练习.统计质数.c" />
+    <ClCompile Include="33_练习.幂级数列.c" />
+    <ClCompile Include="34_练习.特殊数字.c" />
+    <ClCompile Include="35_跳出多层循环goto.c" />
+    <ClCompile Include="36_函数.c" />
+    <ClCompile Include="37_math函数.c" />
+    <ClCompile Include="38_time函数.c" />
+    <ClCompile Include="39_随机数.c" />
     <ClCompile Include="3_变量.c" />
+    <ClCompile Include="40_练习.猜数字.c" />
     <ClCompile Include="4_进制.c" />
     <ClCompile Include="5_数据类型.c" />
     <ClCompile Include="6_小数类型.c" />
